# instaClone

./: .gitignore  manage.py  pyproject.toml
authentication/: forms.py  urls.py  views.py
authentication/templates/: index.html
comment/: models.py  urls.py  views.py
comment/migrations/: 0001_initial.py
instaClone/: asgi.py  settings.py  urls.py  wsgi.py
instaPost/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
instaPost/migrations/: 0001_initial.py  0002_auto_20200712_2005.py  0003_post_archived.py
instaclone.egg-info/: PKG-INFO  SOURCES.txt
instauser/: admin.py  helpers.py  models.py  urls.py  views.py
instauser/migrations/: 0001_initial.py  0002_auto_20200710_1509.py
templates/: error.html  feed.html  generic_form.html  index.html  navbar.html  postUploadForm.html  profilePage.html
